--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "external/dotenv-cppp"]
+[submodule "external/dotenv-cpp"]
 	path = external/dotenv-cpp
 	url = https://github.com/laserpants/dotenv-cpp.git
 [submodule "external/DPP"]
