--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD 17)
 ## We have dotenv-cpp and DPP as submodules in include/
 ## Which we will include in our project
 
-add_subdirectory(include/dotenv-cpp)
-add_subdirectory(include/DPP)
+add_subdirectory(external/dotenv-cpp)
+add_subdirectory(external/DPP)
 
 ## We will include the include/ directory in our project 
 ## So that we can include the headers from the submodules
